# ghc-compat-plugin

./: .gitattributes  .gitignore  .hlint.yaml  .vale.ini  README.md  cabal.project  flake.nix  garnix.yaml  nix-ci.nix
.config/: mustache.yaml
.config/flake/: outputs.nix
.config/project/: default.nix  hlint.nix
.github/: settings.yml
.github/workflows/: build.yml
core/: CHANGELOG.md  README.md  Setup.hs  ghc-compat-plugin.cabal
core/docs/: license-report.md
core/src/: GhcCompat.hs
core/src/GhcCompat/: Supported.hs  Unsupported.hs  Utils.hs
core/src/GhcCompat/Supported/: GhcRelease.hs  Opts.hs
core/supported/: GhcCompat.hs
core/supported/GhcCompat/: GhcRelease.hs  Opts.hs
core/tests/: README.md  compilation-ghc2021.hs  compilation-ghc2024.hs  compilation-haskell.hs  skip.hs  unsupported.hs
core/tests/Test/: Min_6_0_1.hs  Min_6_10_1.hs  Min_6_12_1.hs  Min_6_8_1.hs  Min_7_0_1.hs  Min_7_10_1.hs  Min_7_2_1.hs  Min_7_4_1.hs  Min_7_6_1.hs  Min_7_8_1.hs  Min_8_0_1.hs  Min_8_10_1.hs  Min_8_2_1.hs  Min_8_4_1.hs  Min_8_6_1.hs  Min_8_8_1.hs  Min_9_0_1.hs  Min_9_10_1.hs  Min_9_12_1.hs  Min_9_14_1.hs  Min_9_2_1.hs  Min_9_2_4.hs  Min_9_6_1.hs  Min_9_8_1.hs  SupportGHC2021.hs  SupportGHC2024.hs
core/unsupported/: GhcCompat.hs
