cabal-version: 1.20
-- ^ 1.20 is the first format to support `license-files`.
--
-- https://cabal.readthedocs.io/en/stable/file-format-changelog.html

name: ghc-compat-plugin
version: 0.0.1.0
synopsis: Eases support for multiple GHC versions
description: Controls various GHC options and extensions to make compilation
             across multiple versions easier, and to alert you to
             incompatibilities.
maintainer: Greg Pfeil <greg@technomadic.org>
author: Greg Pfeil <greg@technomadic.org>
copyright: 2026 Greg Pfeil
-- GHC before 8.8.1 (and Cabal before 3.0) can’t deal with the
-- `Universal-FOSS-exception-1.0` SPDX license exception. Since it only makes
-- the license more lax, we just omit it from this field.
license: AGPL-3
license-files:
  LICENSE
  LICENSE.AGPL-3.0-only
  LICENSE.Universal-FOSS-exception-1.0
  LICENSE.commercial
category: Compatibility, Compiler Plugins
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/*.md
tested-with:
  GHC ==7.10.3
  || ==8.0.2
  || ==8.2.2
  || ==8.4.1
  || ==8.6.1
  || ==8.8.1
  || ==8.10.1
  || ==9.0.1
  || ==9.2.1
  || ==9.4.1 || ==9.4.8
  || ==9.6.1 || ==9.6.7
  || ==9.8.1 || ==9.8.4
  || ==9.10.1 || ==9.10.2 || ==9.10.3
  || ==9.12.1 || ==9.12.2
  || ==9.14.1

homepage: https://github.com/sellout/ghc-compat-plugin#readme
bug-reports: https://github.com/sellout/ghc-compat-plugin/issues

source-repository head
  type: git
  location: https://github.com/sellout/ghc-compat-plugin.git
  subdir: core

source-repository this
  type: git
  location: https://github.com/sellout/ghc-compat-plugin.git
  subdir: core
  -- NB: This is the repo version, which is distinct from the package version.
  tag: v0.1.0

flag noisy-deprecations
  description:
    Prior to GHC 9.10, the @DEPRECATED@ pragma can’t distinguish between terms
    and types. Consenquently, you can get spurious warnings when there’s a name
    collision and the name in the other namespace is deprecated. Or you can
    choose to not get those warnings, at the risk of not being warned when
    there’s a name collision and the namespace you’re referencing is the one
    that’s deprecated.
  default: True
  -- Because disabling this flag won’t help the solver.
  manual: True

library
  default-language: Haskell98
  hs-source-dirs:
    src
  build-depends:
    base >=4.8.0 && <4.23,
    ghc >=7.10.3 && <9.16,
    ghc-boot-th >=7.10.3 && <9.16
  if impl(ghc >= 8.0.1)
    ghc-options:
      -Weverything
      -- This one just reports unfixable things, AFAICT.
      -Wno-all-missed-specialisations
      -- Type inference good.
      -Wno-missing-local-signatures
      -- Warns even when `Unsafe` is explicit, not inferred. See
      -- https://gitlab.haskell.org/ghc/ghc/-/issues/16689
      -Wno-unsafe
    if impl(ghc < 8.8.1)
      ghc-options:
        -- This used to warn even when `Safe` was explicit.
        -Wno-safe
  else
    ghc-options:
      -Wall
  -- remove if the oldest supported version is GHC 8.2.1+
  if impl(ghc >= 8.8.1)
    ghc-options:
      -Wno-missing-deriving-strategies
  -- remove if the oldest supported version is GHC 8.10.1+
  if impl(ghc >= 8.10.1)
    ghc-options:
      -Wno-prepositive-qualified-module
  -- remove if the oldest supported version is GHC 9.2.1+
  if impl(ghc >= 9.2.1)
    ghc-options:
      -Wno-missing-kind-signatures
  if impl(ghc >= 9.8.1)
    ghc-options:
      -- remove if the oldest supported version is GHC 9.2.1+
      -Wno-missing-poly-kind-signatures
      -- Inference good.
      -Wno-missing-role-annotations
  -- remove if the oldest supported version is GHC 9.14.1+
  if impl(ghc >= 9.14.1)
    ghc-options:
      -- See
      -- https://github.com/ghc-proposals/ghc-proposals/blob/master/proposals/0581-namespace-specified-imports.rst#deprecate-use-of-pattern-in-import-export-lists
      -Wno-pattern-namespace-specifier
  if flag(noisy-deprecations)
    cpp-options:
      -DSELLOUT_NOISY_DEPRECATIONS
  exposed-modules:
    GhcCompat
  if impl(ghc >= 7.10.1)
    default-extensions:
      -- 6.8.1
      NoImplicitPrelude
      -- 6.10.1
      NamedFieldPuns
      PackageImports
      -- 7.6.1
      LambdaCase
    other-modules:
      GhcCompat.Supported
      GhcCompat.Supported.GhcRelease
      GhcCompat.Supported.Opts
  else
    other-modules:
      GhcCompat.Unsupported
